tests/shouldfail/Poly.hs
module Poly where
import Clash.Prelude

topEntity x y = x && x
